# bideuchre

./: AUTHORS  ChangeLog  Doxyfile  Info.plist  Makefile.am  Makefile.in  NEWS  README  README.md  bideuchre.nsi  configure  configure.ac
docs/: bideuchre.html  bideuchre.txt  rules.html  todo.txt
source/: AppConstants.hh  BidEuchreApp.cc  BidEuchreApp.hh  Makefile.am  Makefile.in
source/bridge/: Bridge.cc  Bridge.hh
source/engine/: AIPlayer.cc  AIPlayer.hh  Game.cc  Game.hh  GameThread.cc  GameThread.hh  Player.cc  Player.hh  Round.cc  Round.hh  Trick.cc  Trick.hh
source/model/: Bid.cc  Bid.hh  BidHistory.cc  BidHistory.hh  Card.cc  Card.hh  Deck.cc  Deck.hh  Hand.cc  Hand.hh  ModelConstants.hh  Play.cc  Play.hh  RoundHistory.cc  RoundHistory.hh  Score.cc  Score.hh  Winner.cc  Winner.hh
source/res/: Info.plist
source/ui/: BidDialog.cc  BidDialog.hh  EuchreFrame.cc  EuchreFrame.hh  GUI.cc  GUI.hh  GUIPlayer.cc  GUIPlayer.hh  GamePanel.cc  GamePanel.hh  HelpDialog.cc  HelpDialog.hh  ScoreDialog.cc  ScoreDialog.hh  TextPlayer.cc  TextPlayer.hh  TextUI.cc  TextUI.hh  UI.cc  UI.hh  UIConstants.hh
vstudio/: bideuchre.sln  bideuchre.vcxproj  bideuchre.vcxproj.filters
